removed console log alerts from code, fixed task description element to have some padding and aligned task remove button

--- a/styles.css
+++ b/styles.css
@@ -102,7 +102,7 @@ textarea {
 .taskDescription{
     position: relative;
     margin: 0;
-    padding: 0;
+    padding: 5px;
     height: 110px;
     overflow-y: scroll;
     font-size: smaller;
@@ -131,5 +131,5 @@ textarea {
     cursor: pointer;
     box-shadow: 0 0 7px indianred;
     left: 145px;
-    bottom: -20px;
+    bottom: -15px;
 }
